fixes for docker