@@ -2,4 +2,4 @@ FROM openjdk:17
 
 COPY scrapper/target/scrapper-1.0-SNAPSHOT.jar app.jar
 
-ENTRYPOINT exec java -jar /app.jar
+ENTRYPOINT exec java --enable-preview -jar /app.jar
